fix: fix z-index

--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -4,6 +4,7 @@
   position:-webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 .nav-land__container {
   margin: 0 auto;
